# ALICE-DB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  pyproject.toml
benches/: db_benchmark.rs  main.rs
bindings/ue5/: AliceDb.h
bindings/unity/: AliceDb.cs
docs/: EXPANSION_PROPOSAL.md
python/alice_db/: __init__.py
src/: analytics_bridge.rs  blob.rs  blob_sstable.rs  blob_wal.rs  bloom.rs  checksum.rs  compaction.rs  crypto_bridge.rs  ffi.rs  lib.rs  memtable.rs  model.rs  query_engine.rs  replication.rs  sdf_bridge.rs  segment.rs  seqlock.rs  storage_engine.rs  transaction.rs
tests/: blob_kv.rs  blob_locking_and_sync.rs  blob_mmap_read.rs  blob_multi_sstable.rs  blob_persistence.rs  blob_scan_kway_merge.rs  blob_sstable_bloom.rs  blob_sstable_integration.rs  blob_tombstone_persistence.rs  test_basic.py
